--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "vue": "^2.5.2",
     "vue-google-autocomplete": "^1.1.0",
     "vue-router": "^3.0.1",
+    "vue-socket.io-extended": "^3.1.0",
     "vue2-google-maps": "^0.10.1",
     "vuetify": "^1.1.7",
     "vuetify-google-autocomplete": "^2.0.0-beta.4",
