--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
+    "cordova": "^8.1.0",
     "cordova-android": "^6.3.0",
     "cordova-call": "^1.1.6",
     "cordova-plugin-device": "^2.0.2",
