--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.8",
     "nodemon": "^1.18.3",
     "socket.io": "^2.1.1"
   }
